[tool.poetry]
name = "fast_strawberry"
version = "0.1.0"
description = "CLI tool to bulk award Strawberry achievements"
authors = ["Stefano Pigozzi <me@steffo.eu>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.22.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
